  * compiler checks for duplicated variables in macro lambda lists.
  * fixed bug 47.d: (DEFGENERIC IF (X)) now signals a PROGRAM-ERROR,
    not a COMPILER-ERROR (followed by some other strange error on
    choosing the CONTINUE restart).
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** the GENERIC-FUNCTION type is no longer disjoint from FUNCTION
       types.
    ** &ENVIRONMENT parameter in macro lambda list is bound first.
    ** SXHASH on condition objects no longer returns NIL.
    ** :ALLOCATION :CLASS slots are better treated; their values are
       updated on class redefinition, and initforms inherited from
       superclasses are applied.
    ** REMOVE-METHOD returns its generic function argument even when
       no method was removed.
    ** SHARED-INITIALIZE now initializes the values of the requested
       slots, including those with :ALLOCATION :CLASS.
    ** ALLOCATE-INSTANCE now works on structure classes defined via
       DEFSTRUCT (and not just by those from DEFCLASS :METACLASS
       STRUCTURE-CLASS).
    ** SLOT-EXISTS-P now works on conditions, as well as structures
       and CLOS instances.

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, maybe in 0.7.x, maybe later, it might impact TRACE. They both
    encapsulate functions, and it's not clear yet how e.g. UNPROFILE
    will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are
    using profiling. If you never profile anything, TRACE should
    continue to behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.